1. Remove Code Contract. 2. Support language switching.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@91 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/AboutDialog.xaml
+++ b/ClearMine.Dialogs/AboutDialog.xaml
@@ -5,13 +5,13 @@
         TextOptions.TextFormattingMode="Display"
         WindowStartupLocation="CenterOwner"
         SizeToContent="WidthAndHeight"
-        Title="About ClearMine"
+        Title="{DynamicResource AboutDialogTitle}"
         ShowInTaskbar="False"
         ResizeMode="NoResize">
     <DockPanel Margin="12">
         <DockPanel DockPanel.Dock="Bottom"
                    LastChildFill="False">
-            <Button Content="OK"
+            <Button Content="{DynamicResource OKButtonLabel}"
                     DockPanel.Dock="Right"
                     IsCancel="True"
                     IsDefault="True" />
@@ -22,11 +22,12 @@
                     UseLayoutRounding="True"
                     Margin="0,0,12,0"/>
             <TextBlock>
-                <Run Text="Clear Mine "
+                <Run Text="{DynamicResource GameName}"
                      FontSize="16" FontWeight="Bold" />
-                Version 1.0<LineBreak />
+                <Run Text="{DynamicResource GameVersion}" />
                 <LineBreak />
-                <Run Text="Hugo Gu All Rights Reserved." />
+                <LineBreak />
+                <Run Text="{DynamicResource GameCopyRight}" />
             </TextBlock>
         </DockPanel>
     </DockPanel>
