--- a/ClearMine/App.xaml
+++ b/ClearMine/App.xaml
@@ -6,6 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ClearMine.Localization;component/en-US/Overall.xaml" />
                 <ResourceDictionary Source="/ClearMine.Themes;component/Themes/Generic.xaml" />
                 <ResourceDictionary Source="Themes\Common.xaml" />
                 <ResourceDictionary Source="/ClearMine.Themes;component/Themes/luna.normalcolor.xaml" />
