--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -1,5 +1,4 @@
-﻿<Window x:Class="ClearMine.UI.Dialogs.ClearMineWindow"
-        x:ClassModifier="internal"
+﻿<Window x:Class="ClearMine.UI.Dialogs.ClearMineWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:c="clr-namespace:ClearMine.UI.Converters"
@@ -12,7 +11,7 @@
         StateChanged="OnStateChanged"
         SnapsToDevicePixels="True"
         Background="Silver"
-        Title="Clear Mine"
+        Title="{DynamicResource ApplicationTitle}"
         Loaded="OnLoaded"
         Height="640"
         Width="600">
@@ -32,45 +31,49 @@
             <ColumnDefinition Width="5" />
         </Grid.ColumnDefinitions>
         <Menu Grid.ColumnSpan="3">
-            <MenuItem Header="Game">
-                <MenuItem Header="New Game"
+            <MenuItem Header="{DynamicResource GameMenuHeader}">
+                <MenuItem Header="{DynamicResource NewGameMenuHeader}"
                           Command="New" />
-                <MenuItem Header="Restart Game"
+                <MenuItem Header="{DynamicResource RestartGameMenuHeader}"
                           Command="Refresh" />
                 <Separator />
-                <MenuItem Header="Open Game..."
+                <MenuItem Header="{DynamicResource OpenGameMenuHeader}"
                           Command="Open" />
-                <MenuItem Header="Save Game..."
+                <MenuItem Header="{DynamicResource SaveAsGameMenuHeader}"
                           Command="SaveAs" />
                 <Separator />
-                <MenuItem Header="Statistics"
+                <MenuItem Header="{DynamicResource HeroListMenuHeader}"
                           Command="{x:Static h:GameCommands.ShowStatistics}" />
                 <Separator />
-                <MenuItem Header="Exit"
+                <MenuItem Header="{DynamicResource ExitMenuHeader}"
                           Command="Close" />
             </MenuItem>
-            <MenuItem Header="Tools">
-                <MenuItem Header="Appearance">
+            <MenuItem Header="{DynamicResource ToolsMenuHeader}">
+                <MenuItem Header="{DynamicResource ThemeMenuHeader}">
                     <MenuItem Header="Mine" />
                     <MenuItem Header="Flower" />
                     <Separator />
-                    <MenuItem Header="Custom..." />
+                    <MenuItem Header="{DynamicResource CustomThemeMenuHeader}" />
                 </MenuItem>
-                <MenuItem Header="Language">
-                    <MenuItem Header="English" />
-                    <MenuItem Header="Chinese" />
+                <MenuItem Header="{DynamicResource LanguageMenuHeader}">
+                    <MenuItem Header="{DynamicResource EnglishMenuItemHeader}"
+                              Command="{x:Static h:GameCommands.SwitchLanguage}"
+                              CommandParameter="en-US" />
+                    <MenuItem Header="{DynamicResource ChineseMenuItemHeader}"
+                              Command="{x:Static h:GameCommands.SwitchLanguage}"
+                              CommandParameter="zh-CN" />
                     <Separator />
-                    <MenuItem Header="Custom..." />
+                    <MenuItem Header="{DynamicResource CustomLanguageMenuItemHeader}" />
                 </MenuItem>
                 <Separator />
-                <MenuItem Header="Options"
+                <MenuItem Header="{DynamicResource OptionsMenuItemHeader}"
                           Command="{x:Static vm:ClearMineViewModel.Option}" />
             </MenuItem>
-            <MenuItem Header="Help">
-                <MenuItem Header="Send Feedback"
+            <MenuItem Header="{DynamicResource HelpMenuItemHeader}">
+                <MenuItem Header="{DynamicResource SendFeedbakMenuItemHeader}"
                           Command="{x:Static h:GameCommands.Feedback}" />
                 <Separator />
-                <MenuItem Header="About"
+                <MenuItem Header="{DynamicResource AboutMenuItemHeader}"
                           Command="{x:Static h:GameCommands.About}" />
             </MenuItem>
         </Menu>
