Refine Exception Box.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@92 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/GameWonWindow.xaml
+++ b/ClearMine.Dialogs/GameWonWindow.xaml
@@ -7,6 +7,7 @@
               WindowStartupLocation="CenterOwner"
               Message="{Binding Message, Mode=OneWay}"
               Content="{Binding Details, Mode=OneWay}"
+              ExpanderMessage="{DynamicResource MoreDetailsMessage}"
               Title="{DynamicResource GameWonDialogTitle}">
     <OptionDialog.Options>
         <x:Array Type="{x:Type Button}">
