--- a/ClearMine/App.xaml
+++ b/ClearMine/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="ClearMine.App" x:ClassModifier="internal"
+﻿<Application x:Class="ClearMine.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Startup="OnAppStartup"
