--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -11,6 +11,11 @@
     <s:String x:Key="GameVersion">Version 1.0</s:String>
     <s:String x:Key="GameCopyRight">Hugo Gu All Rights Reserved.</s:String>
     <s:String x:Key="SavedGameFilter">ClearMine Saved Game File (*.cmg)|*.cmg</s:String>
+    <s:String x:Key="LanguageFileFilter">Language Resource File (*.xaml; *.xml)|*.xaml;*.xml</s:String>
+    <s:String x:Key="InvalidLanguageResourceType">A Language Resource File should only contains string resources.</s:String>
+    <s:String x:Key="MissingLanguageResourceKey">A resource named ‘{0}’ is missing in the Language Resource File.</s:String>
+    <s:String x:Key="LanguageResourceParseError"
+              xml:space="preserve">Failed to parse the resource file, error message is: &#13;&#10; {0}</s:String>
     
     <!-- Difficulties -->
     <s:String x:Key="Beginner">Beginner</s:String>
