--- a/ClearMine.Localization/zh-CN/Overall.xaml
+++ b/ClearMine.Localization/zh-CN/Overall.xaml
@@ -11,6 +11,11 @@
     <s:String x:Key="GameVersion">版本 1.0</s:String>
     <s:String x:Key="GameCopyRight">谷强强 版权所有.</s:String>
     <s:String x:Key="SavedGameFilter">扫雷存档 (*.cmg)|*.cmg</s:String>
+    <s:String x:Key="LanguageFileFilter">本地化资源文件 (*.xaml; *.xml)|*.xaml;*.xml</s:String>
+    <s:String x:Key="InvalidLanguageResourceType">本地化资源文件只能包含字符串资源。</s:String>
+    <s:String x:Key="MissingLanguageResourceKey">本地化资源文件中缺失名为‘{0}’的资源项。</s:String>
+    <s:String x:Key="LanguageResourceParseError"
+              xml:space="preserve">无法解析此资源文件，错误信息： &#13;&#10; {0}</s:String>
 
     <!-- Difficulties -->
     <s:String x:Key="Beginner">初级</s:String>
