--- a/ClearMine.Themes/Themes/generic.xaml
+++ b/ClearMine.Themes/Themes/generic.xaml
@@ -1,11 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:v="clr-namespace:ClearMine.VM;assembly=ClearMine.VM"
+                    xmlns:logic="clr-namespace:ClearMine.Common.Logic;assembly=ClearMine.Common"
                     xmlns:m="clr-namespace:ClearMine.Framework.Commands;assembly=ClearMine.Framework"
                     xmlns:b="clr-namespace:ClearMine.Framework.Behaviors;assembly=ClearMine.Framework">
     <SolidColorBrush x:Key="DialogBackground"
                      Color="#F0F0F0" />
-    
+    <PlaygroundBorderThicknessConverter x:Key="PlaygroundBorderThicknessConverter" />
+    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+
+    <DataTemplate DataType="{x:Type logic:MineCell}">
+        <MineCellControl />
+    </DataTemplate>
+
     <DataTemplate DataType="{x:Type v:GameWonDetailsViewModel}">
         <AutoTransformPanel Margin="24,12,20,12">
             <StackPanel VerticalAlignment="Top">
@@ -28,6 +35,18 @@
             </StackPanel>
         </AutoTransformPanel>
     </DataTemplate>
+
+    <ControlTemplate x:Key="ValidationErrorTemplate">
+        <Border BorderBrush="#99FF0000"
+                BorderThickness="1">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="4"
+                                  Color="Red"
+                                  ShadowDepth="0" />
+            </Border.Effect>
+            <AdornedElementPlaceholder />
+        </Border>
+    </ControlTemplate>
 
     <!--Common Colors definition-->
     <SolidColorBrush x:Key="FocusBorderBrush"
