Fix Log Window not shows bug. And Test Performance of Get property by Lambda. Very poor.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@96 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/OutputWindow.xaml
+++ b/ClearMine.Dialogs/OutputWindow.xaml
@@ -12,9 +12,9 @@
              VerticalScrollBarVisibility="Auto">
         <TextBox.ContextMenu>
             <ContextMenu>
-                <MenuItem Command="{DynamicResource CopyCommandLabel}"
+                <MenuItem Command="Copy"
                           CommandTarget="{x:Reference logBox}"
-                          Header="Copy" />
+                          Header="{DynamicResource CopyCommandLabel}" />
                 <Separator />
                 <MenuItem Header="{DynamicResource ClearCommandLabel}"
                           Click="OnClearClick" />
